--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "hello-no-src"
+name = "DreamManager"
 version = "0.1.0"
-authors = ["Douile <25043847+Douile@users.noreply.github.com>"]
+authors = ["lxchn1v1 <flat.assembly@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
