--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,8 @@ authors = ["lxchn1v1 <flat.assembly@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "dreammanager"
+path = "src/main.rs"
 
 [dependencies]
