--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        target: [x86_64-unknown-linux-musl]
+        target: [x86_64-pc-windows-msvc]
     steps:
       - uses: actions/checkout@master
       - name: Compile and release
