--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,13 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        target: [x86_64-pc-windows-gnu]
+        include:
+          - target: x86_64-pc-windows-gnu
+            archive: zip
+          - target: x86_64-unknown-linux-musl
+            archive: zip
+          - target: x86_64-apple-darwin
+            archive: zip
     steps:
       - uses: actions/checkout@master
       - name: Compile and release
@@ -18,12 +24,10 @@ jobs:
         with:
           RUSTTARGET: ${{ matrix.target }}
           UPLOAD_MODE: none
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3.1.2
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
         with:
-          # Artifact name
-          name: BINARY
-          # A file, directory or wildcard pattern that describes what to upload
-          path: target/
-      - name: Checkout output
-        run: ls -laR
+          name: Binary
+          path: |
+            ${{ steps.compile.outputs.BUILT_ARCHIVE }}
+            ${{ steps.compile.outputs.BUILT_CHECKSUM }}
