--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - target: x86_64-unknown-linux-gnu
+          - target: x86_64-unknown-linux-musl
             archive: zip
     steps:
       - uses: actions/checkout@master
@@ -55,7 +55,7 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - target: x86_64-unknown-linux-gnu
+          - target: x86_64-apple-darwin
             archive: zip
     steps:
       - uses: actions/checkout@master
